<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient"
    tools:context=".activities.menu.MenuFilterUsersFragment">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filter_users"
            android:layout_gravity="center"
            android:textSize="50dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <Spinner
                android:id="@+id/drop_down_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_arrays"
                android:layout_gravity="center"
                android:spinnerMode="dialog"
                android:layout_weight="2"/>

            <!-- Filter Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1">

                <EditText android:id="@+id/filter_value"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="text"
                    android:textStyle="italic"
                    android:textColor="#000000"
                    android:hint="@string/value"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/filter"
            android:background="@color/colorButton"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_filtered_users_recycler_view"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</FrameLayout>
</ScrollView>